// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe de mostar el component con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product Image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage debe de mostrar el componente correctamente con la imagen personalizada 1`] = `
<img
  alt="Product Image"
  className="productImg custom-img"
  src="./coffee-mug.png"
/>
`;
